RESOLVED FIXED43192
Warning fix on platforms where XP_MACOSX is undefined.
https://bugs.webkit.org/show_bug.cgi?id=43192
Summary Warning fix on platforms where XP_MACOSX is undefined.
Csaba Osztrogonác
Reported 2010-07-29 08:46:35 PDT
Warnings on Qt buildbot: /home/webkitbuildbot/slaves/release32bit/buildslave/qt-linux-release/build/WebKitTools/DumpRenderTree/TestNetscapePlugIn/PluginObject.h:28:5: warning: "XP_MACOSX" is not defined /home/webkitbuildbot/slaves/release32bit/buildslave/qt-linux-release/build/WebKitTools/DumpRenderTree/TestNetscapePlugIn/PluginObject.h:69:5: warning: "XP_MACOSX" is not defined /home/webkitbuildbot/slaves/release32bit/buildslave/qt-linux-release/build/WebKitTools/DumpRenderTree/TestNetscapePlugIn/PluginObject.h:83:5: warning: "XP_MACOSX" is not defined
Attachments
accidentally uploaded (1.36 KB, patch)
2010-07-29 08:48 PDT, Csaba Osztrogonác
no flags
proposed patch (1.71 KB, patch)
2010-07-29 08:51 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2010-07-29 08:48:52 PDT
Created attachment 62950 [details] accidentally uploaded We can use #if defined(XP_MACOSX) instead of #if XP_MACOSX , because XP_MACOSX is 1 when it is defined.
Csaba Osztrogonác
Comment 2 2010-07-29 08:51:10 PDT
Created attachment 62951 [details] proposed patch We can use #if defined(XP_MACOSX) instead of #if XP_MACOSX , because XP_MACOSX is 1 when it is defined.
Antonio Gomes
Comment 3 2010-07-29 08:55:47 PDT
Comment on attachment 62951 [details] proposed patch r=me , can you wait green builtbots before commit, please?
Csaba Osztrogonác
Comment 4 2010-07-29 09:14:03 PDT
Comment on attachment 62951 [details] proposed patch Clearing flags on attachment: 62951 Committed r64282: <http://trac.webkit.org/changeset/64282>
Csaba Osztrogonác
Comment 5 2010-07-29 09:14:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.