2010-07-29  Csaba Osztrogonác  <ossy@webkit.org>

Reviewed by Antonio Gomes.

        Warning fix on platforms where XP_MACOSX is undefined.
        https://bugs.webkit.org/show_bug.cgi?id=43192

        * DumpRenderTree/TestNetscapePlugIn/PluginObject.h:
        Use #if defined(XP_MACOSX) instead of #if XP_MACOSX .


git-svn-id: svn://svn.chromium.org/blink/trunk@64282 bbb929c8-8fbe-4397-9dbb-9b2b20218538